# OmniCoreAgent-claw

./: README.md  pyproject.toml
nanobot/agent/: omni_loop.py
nanobot/cli/: commands.py
omnicoreagent_claw/: __init__.py  __main__.py
omnicoreagent_claw/agent/: __init__.py  context.py  file_memory.py  loop.py  memory.py  omni_loop.py  skills.py  subagent.py
omnicoreagent_claw/agent/tools/: __init__.py  cron.py  filesystem.py  mcp.py  message.py  registry.py  shell.py  spawn.py  web.py
omnicoreagent_claw/bus/: __init__.py  queue.py
omnicoreagent_claw/channels/: __init__.py  base.py  dingtalk.py  discord.py  email.py  feishu.py  manager.py  mochat.py  qq.py  slack.py  telegram.py  whatsapp.py
omnicoreagent_claw/cli/: __init__.py  commands.py
omnicoreagent_claw/config/: __init__.py  loader.py  schema.py
omnicoreagent_claw/cron/: __init__.py  service.py
omnicoreagent_claw/heartbeat/: __init__.py
omnicoreagent_claw/providers/: __init__.py  custom_provider.py  litellm_provider.py  openai_codex_provider.py  registry.py
omnicoreagent_claw/session/: __init__.py  manager.py
omnicoreagent_claw/skills/: README.md
omnicoreagent_claw/skills/clawhub/: SKILL.md
omnicoreagent_claw/skills/github/: SKILL.md
omnicoreagent_claw/skills/summarize/: SKILL.md
omnicoreagent_claw/skills/tmux/: SKILL.md
omnicoreagent_claw/skills/tmux/scripts/: find-sessions.sh
omnicoreagent_claw/skills/weather/: SKILL.md
omnicoreagent_claw/utils/: __init__.py  helpers.py
tests/: test_cli_input.py  test_commands.py  test_consolidate_offset.py  test_email_channel.py  test_tool_validation.py
workspace/: AGENTS.md  HEARTBEAT.md  SOUL.md  TOOLS.md  USER.md
