[project]
name = "omnicoreagent-claw"
version = "0.2.0"
description = "Personal AI Agent powered by OmniCoreAgent — local-first, multi-channel, always-on"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Abiola Adeshina", email = "abiolaadedayo1993@gmail.com"}
]
keywords = ["ai", "agent", "personal-agent", "omnicoreagent", "deep-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "typer>=0.9.0",
    "litellm>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "websockets>=12.0",
    "websocket-client>=1.6.0",
    "httpx>=0.25.0",
    "oauth-cli-kit>=0.1.1",
    "loguru>=0.7.0",
    "readability-lxml>=0.8.0",
    "rich>=13.0.0",
    "croniter>=2.0.0",
    "dingtalk-stream>=0.4.0",
    "python-telegram-bot[socks]>=21.0",
    "lark-oapi>=1.0.0",
    "socksio>=1.0.0",
    "python-socketio>=5.11.0",
    "msgpack>=1.0.8",
    "slack-sdk>=3.26.0",
    "slackify-markdown>=0.2.0",
    "qq-botpy>=1.0.0",
    "python-socks[asyncio]>=2.4.0",
    "prompt-toolkit>=3.0.0",
    "mcp>=1.0.0",
    "json-repair>=0.30.0",
    "omnicoreagent>=0.3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
oca-claw = "omnicoreagent_claw.cli.commands:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["omnicoreagent_claw"]

[tool.hatch.build.targets.wheel.sources]
"omnicoreagent_claw" = "omnicoreagent_claw"

# Include non-Python files in skills
[tool.hatch.build]
include = [
    "omnicoreagent_claw/**/*.py",
    "omnicoreagent_claw/skills/**/*.md",
    "omnicoreagent_claw/skills/**/*.sh",
]

[tool.hatch.build.targets.sdist]
include = [
    "omnicoreagent_claw/",
    "bridge/",
    "README.md",
    "LICENSE",
]

[tool.hatch.build.targets.wheel.force-include]
"bridge" = "omnicoreagent_claw/bridge"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

